--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,7 @@ BugReports: https://github.com/gadenbuie/lorem/issues
 Depends:
     R (>= 2.10)
 Imports: 
+    knitr,
     stats
 Suggests: 
     rstudioapi
