--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,14 +2,11 @@ Package: lorem
 Title: Generate Lorem Ipsum Text
 Version: 0.1.0
 Authors@R: 
-    person(given = "Garrick",
-           family = "Aden-Buie",
-           role = c("aut", "cre"),
-           email = "garrick@adenbuie.com",
+    person("Garrick", "Aden-Buie", , "garrick@adenbuie.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-7111-0077"))
-Description: Quickly generate lorem ipsum placeholder text. Easy
-    to integrate in RMarkdown documents. Includes an RStudio addin to
-    insert lorem ipsum into the current document.
+Description: Quickly generate lorem ipsum placeholder text. Easy to
+    integrate in RMarkdown documents. Includes an RStudio addin to insert
+    lorem ipsum into the current document.
 License: MIT + file LICENSE
 URL: https://github.com/gadenbuie/lorem
 BugReports: https://github.com/gadenbuie/lorem/issues
