--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,10 @@ Imports:
     knitr,
     stats
 Suggests:
-    rstudioapi
+    rstudioapi,
+    testthat (>= 3.0.0),
+    withr
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+Config/testthat/edition: 3
