--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ BugReports: https://github.com/gadenbuie/lorem/issues
 Depends:
     R (>= 2.10)
 Imports:
+    htmltools,
     knitr,
     stats
 Suggests:
