--- a/.github/workflows/auto-pkg-maintenance.yaml
+++ b/.github/workflows/auto-pkg-maintenance.yaml
@@ -14,3 +14,4 @@ jobs:
       extra-packages: deps::.
       install-local-package: true
       source-repository-owner: gadenbuie
+      pandoc-version: 3.1.1
