--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -105,8 +105,9 @@ jobs:
           id: pkgdown-deploy
           append: false
           message: >
-            Preview documentation for this PR (at commit ${{ github.event.pull_request.head.sha }}):
-            ${{ steps.deploy.outputs.url }}.
+            :book: ${{ steps.deploy.outputs.url }}
+
+            Preview documentation for this PR (at commit ${{ github.event.pull_request.head.sha }})
 
   pkgdown-clean:
     if: ${{ github.event_name == 'pull_request' && github.event.action == 'closed' }}
@@ -141,4 +142,4 @@ jobs:
           id: pkgdown-deploy
           recreate: true
           message: |
-            Preview documentation for this PR has been cleaned up.
+            :closed_book: Preview documentation for this PR has been cleaned up.
